<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Days of the week-->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!--  Days of the week in Vietnamese  -->
    <string name="monday_vietnamese">Thứ hai</string>
    <string name="tuesday_vietnamese">Thứ ba</string>
    <string name="wednesday_vietnamese">Thứ tư</string>
    <string name="thursday_vietnamese">Thứ năm</string>
    <string name="friday_vietnamese">Thứ sáu</string>
    <string name="saturday_vietnamese">Thứ bảy</string>
    <string name="sunday_vietnamese">Chủ nhật</string>

    <!--  Specific weather degree in tropical region  -->
    <string name="tropical_cloudy_weather">25^C - 27^C</string>
    <string name="tropical_rainy_weather">24^C - 27^C</string>
    <string name="tropical_sunny_weather">27^C - 30^C</string>
    <string name="tropical_windy_weather">24^C - 26^C</string>
    <string name="tropical_sunny_and_cloudy_weather">26^C - 29^C</string>

    <!--  Specific weather degree in temperate region  -->
    <string name="temperate_cloudy_weather">12^C - 18^C</string>
    <string name="temperate_rainy_weather">11^C - 17^C</string>
    <string name="temperate_sunny_weather">16^C - 22^C</string>
    <string name="temperate_windy_weather">10^C - 15^C</string>
    <string name="temperate_sunny_and_cloudy_weather">14^C - 20^C</string>

    <string name="main_text">Weather Forecast</string>

    <!--  Specific regions  -->
    <string name="location_1">Hanoi</string>
    <string name="location_2">London</string>
    <string name="location_3">Tokyo</string>

    <!--  Current weather degree  -->
    <string name="degree_location_1">25^C</string>
    <string name="degree_location_2">13^C</string>
    <string name="degree_location_3">24^C</string>

    <!--  Current weather state  -->
    <string name="cloudy">Cloudy</string>
    <string name="rainy">Rainy</string>
    <string name="sunny">Sunny</string>
    <string name="windy">Windy</string>

    <!--  Current weather state in Vietnamese -->
    <string name="cloudy_vietnamese">Nhiều mây</string>
    <string name="rainy_vietnamese">Có mưa</string>
    <string name="sunny_vietnamese">Nhiều nắng</string>
    <string name="windy_vietnamese">Có gió</string>

    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <string name="refresh_message">Refreshing...</string>
    <string name="fetch_success">Fetched Successfully</string>
</resources>