<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/frame"
    tools:context=".WeatherFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <!--Main Image-->
        <ImageView
            android:id="@+id/imageViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="false"
            android:background="@drawable/cloudy"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_location_1"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/textViewWeatherContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudy_vietnamese"
                android:textSize="25sp"/>
        </LinearLayout>
        
        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:textSize="25sp"
            android:text="@string/location_1"/>

    </RelativeLayout>

</FrameLayout>