<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="#B6CCDF"
    tools:context=".ForecastFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/refresh_message" />
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Fragment which exhibits Hanoi's Monday weather-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView1_1"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/monday_vietnamese"
                android:textSize="@dimen/text_font_size"/>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/cloudy"
                android:contentDescription="@null"/>
            
            <TextView
                android:id="@+id/textView1_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tropical_cloudy_weather"
                android:textSize="@dimen/text_font_size"/>
        </LinearLayout>

        <!--Fragment which exhibits Hanoi's Tuesday weather-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView2_1"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tuesday_vietnamese"
                android:textSize="@dimen/text_font_size"/>
            
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/rain"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/textView2_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tropical_rainy_weather"
                android:textSize="@dimen/text_font_size"/>
        </LinearLayout>

        <!--Fragment which exhibits Hanoi's Wednesday weather-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView3_1"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/wednesday_vietnamese"
                android:textSize="@dimen/text_font_size"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/cloudy"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/textView3_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tropical_cloudy_weather"
                android:textSize="@dimen/text_font_size"/>
        </LinearLayout>

        <!--Fragment which exhibits Hanoi's Thursday weather-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView4_1"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/thursday_vietnamese"
                android:textSize="@dimen/text_font_size" />


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/day_clear"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/textView4_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tropical_sunny_weather"
                android:textSize="@dimen/text_font_size"/>
        </LinearLayout>

        <!--Fragment which exhibits Hanoi's Friday weather-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView5_1"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/friday_vietnamese"
                android:textSize="@dimen/text_font_size"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/day_partial_cloud"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/textView5_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tropical_sunny_weather"
                android:textSize="@dimen/text_font_size"/>
        </LinearLayout>

        <!--Fragment which exhibits Hanoi's Saturday weather-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView6_1"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/saturday_vietnamese"
                android:textSize="@dimen/text_font_size"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/rain"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/textView6_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tropical_rainy_weather"
                android:textSize="@dimen/text_font_size"/>
        </LinearLayout>

        <!--Fragment which exhibits Hanoi's Sunday weather-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView7_1"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/sunday_vietnamese"
                android:textSize="@dimen/text_font_size"/>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/cloudy"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/textView7_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tropical_cloudy_weather"
                android:textSize="@dimen/text_font_size"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>